## PRModelLab.gd
## PR (Profit-Relationship) æ¨¡å‹äº¤æ˜“å®éªŒå®¤
## 
## åŠŸèƒ½ï¼šå¯è§†åŒ–è°ƒè¯• AI çš„ PR æ•ˆç”¨è®¡ç®—é€»è¾‘
## - å…¨æ»‘æ¡æ§åˆ¶ï¼šæ— éœ€é”®ç›˜è¾“å…¥
## - å®æ—¶é¢„è§ˆï¼šå‚æ•°å˜åŒ–ç«‹å³åæ˜ åˆ°å…¬å¼æ˜¾ç¤º
## - æäº¤æ‰§è¡Œï¼šè§¦å‘çœŸæ­£çš„æƒ…ç»ªæ¼”åŒ–

class_name PRModelLab
extends Control


## ===== èŠ‚ç‚¹å¼•ç”¨ =====

# å·¦é¢æ¿ï¼šAI è„‘å›¾
@onready var sf_slider: HSlider = $HSplitContainer/LeftPanel/StrategyFactorGroup/SFSlider
@onready var sf_value_label: Label = $HSplitContainer/LeftPanel/StrategyFactorGroup/SFValueLabel
@onready var batna_slider: HSlider = $HSplitContainer/LeftPanel/BATNAGroup/BATNASlider
@onready var batna_value_label: Label = $HSplitContainer/LeftPanel/BATNAGroup/BATNAValueLabel
@onready var sentiment_slider: HSlider = $HSplitContainer/LeftPanel/SentimentGroup/SentimentSlider
@onready var sentiment_value_label: Label = $HSplitContainer/LeftPanel/SentimentGroup/SentimentValueLabel
@onready var volatility_slider: HSlider = $HSplitContainer/LeftPanel/VolatilityGroup/VolatilitySlider
@onready var volatility_value_label: Label = $HSplitContainer/LeftPanel/VolatilityGroup/VolatilityValueLabel

# ä¸­é¢æ¿ï¼šææ¡ˆæ„é€ å™¨
@onready var p_slider: VSlider = $HSplitContainer/CenterPanel/SliderContainer/ProfitGroup/PSlider
@onready var p_value_label: Label = $HSplitContainer/CenterPanel/SliderContainer/ProfitGroup/PValueLabel
@onready var r_slider: VSlider = $HSplitContainer/CenterPanel/SliderContainer/RelationshipGroup/RSlider
@onready var r_value_label: Label = $HSplitContainer/CenterPanel/SliderContainer/RelationshipGroup/RValueLabel
@onready var formula_display: RichTextLabel = $HSplitContainer/CenterPanel/FormulaDisplay
@onready var submit_button: Button = $HSplitContainer/CenterPanel/SubmitButton

# å³é¢æ¿ï¼šå†å²æ—¥å¿—
@onready var history_log: RichTextLabel = $HSplitContainer/RightPanel/HistoryLog

# å±å¹•é—ªçƒåé¦ˆ
@onready var screen_flash: ColorRect = $ScreenFlash


## ===== å†…éƒ¨çŠ¶æ€ =====

## AI å¤§è„‘å®ä¾‹ (ç‹¬ç«‹äºæ¸¸æˆä¸»å¾ªç¯)
var ai_brain: RefCounted = null

## å½“å‰å›åˆæ•°
var current_round: int = 0

## GapLCardData è„šæœ¬å¼•ç”¨
var GapLCardDataScript: GDScript = null


## ===== ç”Ÿå‘½å‘¨æœŸ =====

func _ready() -> void:
	_init_ai_brain()
	_connect_signals()
	_sync_ui_from_ai()
	_update_preview()


## åˆå§‹åŒ–ç‹¬ç«‹çš„ AI å¤§è„‘å®ä¾‹
func _init_ai_brain() -> void:
	# åŠ¨æ€åŠ è½½è„šæœ¬ä»¥é¿å…å¾ªç¯ä¾èµ–
	var GapLAI: GDScript = load("res://scenes/gap_l_mvp/scripts/GapLAI.gd")
	GapLCardDataScript = load("res://scenes/gap_l_mvp/resources/GapLCardData.gd")
	
	ai_brain = GapLAI.new()
	
	# è®¾ç½®é»˜è®¤å€¼
	ai_brain.strategy_factor = 0.5
	ai_brain.base_batna = 0.0
	ai_brain.current_sentiment = 0.0
	ai_brain.emotional_volatility = 0.5
	
	# ç›‘å¬æƒ…ç»ªå˜åŒ–ä¿¡å·
	ai_brain.sentiment_changed.connect(_on_ai_sentiment_changed)
	
	print("[PRModelLab] AI å¤§è„‘åˆå§‹åŒ–å®Œæˆ")


## è¿æ¥æ‰€æœ‰ UI ä¿¡å·
func _connect_signals() -> void:
	# å·¦é¢æ¿æ»‘æ¡
	sf_slider.value_changed.connect(_on_sf_slider_changed)
	batna_slider.value_changed.connect(_on_batna_slider_changed)
	sentiment_slider.value_changed.connect(_on_sentiment_slider_changed)
	volatility_slider.value_changed.connect(_on_volatility_slider_changed)
	
	# ä¸­é¢æ¿æ»‘æ¡
	p_slider.value_changed.connect(_on_p_slider_changed)
	r_slider.value_changed.connect(_on_r_slider_changed)
	
	# æäº¤æŒ‰é’®
	submit_button.pressed.connect(_on_submit_pressed)


## ä» AI çŠ¶æ€åŒæ­¥ UI æ˜¾ç¤º
func _sync_ui_from_ai() -> void:
	# é˜»æ­¢ä¿¡å·è§¦å‘ä»¥é¿å…å¾ªç¯æ›´æ–°
	sf_slider.set_block_signals(true)
	batna_slider.set_block_signals(true)
	sentiment_slider.set_block_signals(true)
	volatility_slider.set_block_signals(true)
	
	sf_slider.value = ai_brain.strategy_factor
	batna_slider.value = ai_brain.base_batna
	sentiment_slider.value = ai_brain.current_sentiment
	volatility_slider.value = ai_brain.emotional_volatility
	
	sf_slider.set_block_signals(false)
	batna_slider.set_block_signals(false)
	sentiment_slider.set_block_signals(false)
	volatility_slider.set_block_signals(false)
	
	_update_sf_label()
	_update_batna_label()
	_update_sentiment_label()
	_update_volatility_label()


## ===== å·¦é¢æ¿ï¼šAI å‚æ•°æ§åˆ¶ =====

func _on_sf_slider_changed(value: float) -> void:
	ai_brain.strategy_factor = value
	_update_sf_label()
	_update_preview()


func _update_sf_label() -> void:
	var sf: float = ai_brain.strategy_factor
	var personality: String = ""
	
	if sf <= -0.5:
		personality = "æ¶éœ¸å‹ ğŸ˜ˆ"
	elif sf <= -0.1:
		personality = "å«‰å¦’å‹ ğŸ˜’"
	elif sf < 0.1:
		personality = "å†·æ¼ å‹ ğŸ˜"
	elif sf < 0.5:
		personality = "åˆä½œå‹ ğŸ¤"
	else:
		personality = "åœ£äººå‹ ğŸ˜‡"
	
	sf_value_label.text = "%.2f: %s" % [sf, personality]


func _on_batna_slider_changed(value: float) -> void:
	ai_brain.base_batna = value
	_update_batna_label()
	_update_preview()


func _update_batna_label() -> void:
	batna_value_label.text = "åº•çº¿: %.1f" % ai_brain.base_batna


func _on_sentiment_slider_changed(value: float) -> void:
	# æ‰‹åŠ¨è¦†ç›–æƒ…ç»ªå€¼ï¼ˆä¸è°ƒç”¨ update_sentiment é¿å…è§¦å‘ä¿¡å·ï¼‰
	ai_brain.current_sentiment = value
	_update_sentiment_label()
	_update_preview()


func _update_sentiment_label() -> void:
	var sent: float = ai_brain.current_sentiment
	var emoji: String = ai_brain.get_sentiment_emoji()
	var label: String = ai_brain.get_sentiment_label()
	sentiment_value_label.text = "%s %.2f (%s)" % [emoji, sent, label]


func _on_volatility_slider_changed(value: float) -> void:
	ai_brain.emotional_volatility = value
	_update_volatility_label()
	_update_preview()


func _update_volatility_label() -> void:
	volatility_value_label.text = "æ•æ„Ÿåº¦: %.2f" % ai_brain.emotional_volatility


## ===== ä¸­é¢æ¿ï¼šææ¡ˆæ„é€  =====

func _on_p_slider_changed(value: float) -> void:
	_update_p_label()
	_update_preview()


func _update_p_label() -> void:
	var p_val: float = p_slider.value
	var color: String = "green" if p_val >= 0 else "red"
	p_value_label.text = "P: %.1f" % p_val
	# æ³¨ï¼šLabel ä¸æ”¯æŒ BBCodeï¼Œä½¿ç”¨ä¸»é¢˜è‰²æ›¿ä»£
	if p_val >= 0:
		p_value_label.add_theme_color_override("font_color", Color("#00cc66"))
	else:
		p_value_label.add_theme_color_override("font_color", Color("#ff4444"))


func _on_r_slider_changed(value: float) -> void:
	_update_r_label()
	_update_preview()


func _update_r_label() -> void:
	var r_val: float = r_slider.value
	r_value_label.text = "R: %.1f" % r_val
	if r_val >= 0:
		r_value_label.add_theme_color_override("font_color", Color("#00cc66"))
	else:
		r_value_label.add_theme_color_override("font_color", Color("#ff4444"))


## ===== æ ¸å¿ƒå¾ªç¯ Aï¼šå®æ—¶é¢„è§ˆ =====

## å®æ—¶é¢„è§ˆè®¡ç®—ï¼ˆä¸ä¿®æ”¹ AI çŠ¶æ€ï¼‰
func _update_preview() -> void:
	# æ„é€ è™šæ‹Ÿå¡ç‰Œ
	var mock_card: Resource = _create_mock_card(p_slider.value, r_slider.value)
	
	# è°ƒç”¨ AI è®¡ç®—
	var result: Dictionary = ai_brain.calculate_utility([mock_card])
	
	# æ›´æ–°å…¬å¼æ˜¾ç¤º
	_render_formula(result)


## åˆ›å»ºç”¨äºé¢„è§ˆçš„è™šæ‹Ÿå¡ç‰Œ
func _create_mock_card(profit: float, relationship: float) -> Resource:
	var card: Resource = GapLCardDataScript.new()
	card.card_name = "PreviewCard"
	card.g_value = profit # P = æˆ‘æ–¹æ”¶ç›Š
	card.opp_value = relationship # R = å¯¹æ–¹æ”¶ç›Š
	return card


## æ¸²æŸ“å…¬å¼æ˜¾ç¤º
func _render_formula(result: Dictionary) -> void:
	var bd: Dictionary = result["breakdown"]
	var p: float = bd["v_self"]
	var r: float = bd["v_opp"]
	var sf: float = bd["strategy_factor"]
	var rel_util: float = bd["relationship_utility"]
	var total: float = result["total_score"]
	var batna: float = bd["base_batna"]
	var accepted: bool = result["accepted"]
	
	# æ„å»º BBCode å…¬å¼
	var p_color: String = "green" if p >= 0 else "red"
	var r_color: String = "cyan" if r >= 0 else "orange"
	var sf_color: String = "yellow"
	var rel_color: String = "lime" if rel_util >= 0 else "salmon"
	var total_color: String = "white"
	var status_icon: String = "âœ…" if accepted else "âŒ"
	var status_color: String = "green" if accepted else "red"
	
	var formula_text: String = """[center][b]â•â•â• PR æ•ˆç”¨å…¬å¼ â•â•â•[/b][/center]

[code]Utility = P + (R Ã— SF)[/code]

[color=%s]P[/color] = [color=%s]%.1f[/color]
[color=%s]R[/color] = [color=%s]%.1f[/color]
[color=%s]SF[/color] = [color=%s]%.2f[/color] (æœ‰æ•ˆå€¼ï¼Œå«æƒ…ç»ªä¿®æ­£)

[color=%s]å…³ç³»æ•ˆç”¨[/color] = R Ã— SF = [color=%s]%.1f[/color]

[b]æ€»æ•ˆç”¨[/b] = %.1f + %.1f = [color=%s][b]%.1f[/b][/color]
BATNA = %.1f

[center][font_size=24][color=%s]%s %s[/color][/font_size][/center]
""" % [
		p_color, p_color, p,
		r_color, r_color, r,
		sf_color, sf_color, sf,
		rel_color, rel_color, rel_util,
		p, rel_util, total_color, total,
		batna,
		status_color, status_icon, "æ¥å—" if accepted else "æ‹’ç»"
	]
	
	formula_display.text = formula_text


## ===== æ ¸å¿ƒå¾ªç¯ Bï¼šæäº¤æ‰§è¡Œ =====

func _on_submit_pressed() -> void:
	current_round += 1
	
	# æ„é€ å¡ç‰Œå¹¶æ‰§è¡ŒçœŸæ­£è®¡ç®—
	var p_val: float = p_slider.value
	var r_val: float = r_slider.value
	var mock_card: Resource = _create_mock_card(p_val, r_val)
	var result: Dictionary = ai_brain.calculate_utility([mock_card])
	
	# ===== æƒ…ç»ªæ¼”åŒ– =====
	# æ ¹æ® R å€¼ï¼ˆå¯¹æ–¹æ”¶ç›Šï¼‰æ›´æ–° AI æƒ…ç»ª
	var emotion_delta: float = 0.0
	var emotion_reason: String = ""
	
	if r_val > 0:
		# AI è·åˆ© -> æƒ…ç»ªå˜å¥½
		emotion_delta = clampf(r_val / 100.0, 0.05, 0.3)
		emotion_reason = "è·åˆ© %.1fï¼Œå¿ƒæƒ…å˜å¥½" % r_val
	elif r_val < 0:
		# AI å—æŸ -> æƒ…ç»ªå˜å·®
		emotion_delta = clampf(r_val / 100.0, -0.3, -0.05)
		emotion_reason = "å—æŸ %.1fï¼Œå¿ƒæƒ…å˜å·®" % r_val
	
	if emotion_delta != 0.0:
		ai_brain.update_sentiment(emotion_delta, emotion_reason)
		# UI ä¼šé€šè¿‡ä¿¡å·è‡ªåŠ¨æ›´æ–°
	
	# ===== è®°å½•æ—¥å¿— =====
	_append_history_log(p_val, r_val, result)
	
	# ===== å±å¹•åé¦ˆ =====
	_play_screen_flash(result["accepted"])


## AI æƒ…ç»ªå˜åŒ–å›è°ƒ -> åŒæ­¥æ»‘æ¡æ˜¾ç¤º
func _on_ai_sentiment_changed(new_value: float, reason: String) -> void:
	# é˜»æ­¢è§¦å‘ value_changed ä¿¡å·é¿å…å¾ªç¯
	sentiment_slider.set_block_signals(true)
	sentiment_slider.value = new_value
	sentiment_slider.set_block_signals(false)
	
	_update_sentiment_label()
	_update_preview()
	
	print("[PRModelLab] æƒ…ç»ªæ›´æ–°: %.2f | %s" % [new_value, reason])


## è¿½åŠ å†å²æ—¥å¿—
func _append_history_log(p_val: float, r_val: float, result: Dictionary) -> void:
	var bd: Dictionary = result["breakdown"]
	var sf: float = bd["strategy_factor"]
	var total: float = result["total_score"]
	var accepted: bool = result["accepted"]
	var reason: String = result["reason"]
	
	var status_icon: String = "âœ…" if accepted else "âŒ"
	var status_color: String = "green" if accepted else "red"
	
	var log_entry: String = """[color=gray]â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”[/color]
[b][Round #%d][/b] P:[color=green]%.0f[/color] R:[color=cyan]%.0f[/color] SF:[color=yellow]%.2f[/color]
â†’ Utility: [b]%.1f[/b] [color=%s]%s[/color]
[i][color=silver]%s[/color][/i]

""" % [
		current_round, p_val, r_val, sf,
		total, status_color, status_icon,
		reason
	]
	
	# å€’åºæ’å…¥ï¼ˆæ–°çš„åœ¨æœ€ä¸Šé¢ï¼‰
	history_log.text = log_entry + history_log.text


## æ’­æ”¾å±å¹•é—ªçƒåŠ¨ç”»
func _play_screen_flash(accepted: bool) -> void:
	var flash_color: Color
	if accepted:
		flash_color = Color(0.0, 0.8, 0.3, 0.4) # ç»¿è‰²
	else:
		flash_color = Color(0.9, 0.2, 0.2, 0.4) # çº¢è‰²
	
	screen_flash.color = flash_color
	screen_flash.visible = true
	
	# åˆ›å»ºæ¸éšåŠ¨ç”»
	var tween: Tween = create_tween()
	tween.tween_property(screen_flash, "color:a", 0.0, 0.3)
	tween.tween_callback(func() -> void: screen_flash.visible = false)
